--- a/scoutProject/backend/src/main/resources/application.properties
+++ b/scoutProject/backend/src/main/resources/application.properties
@@ -1,6 +1,13 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/scout
-spring.datasource.username=root
-spring.datasource.password=admin
+# Configuração do banco de dados usando variáveis do .env
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_DATABASE}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuração do Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Configuração opcional para exibição detalhada de logs SQL
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
