--- a/scoutProject/backend/src/main/resources/application.properties
+++ b/scoutProject/backend/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Configuração do Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 # Configuração opcional para exibição detalhada de logs SQL
 logging.level.org.hibernate.SQL=DEBUG
