--- a/scoutProject/backend/pom.xml
+++ b/scoutProject/backend/pom.xml
@@ -27,6 +27,13 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
+        <!-- swagger -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+
         <!-- Dot Env -->
         <dependency>
             <groupId>me.paulschwarz</groupId>
